--- a/pages/findEmoAction.html
+++ b/pages/findEmoAction.html
@@ -190,8 +190,7 @@
     
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
     <script type="text/javascript" src="../assets/js/textarea.js"></script>
   </body>
 </html>
