--- a/pages/findEmoHate.html
+++ b/pages/findEmoHate.html
@@ -113,7 +113,6 @@
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
