--- a/pages/findEmoThanks.html
+++ b/pages/findEmoThanks.html
@@ -80,7 +80,6 @@
     
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
