--- a/pages/index.html
+++ b/pages/index.html
@@ -19,10 +19,6 @@
       </div>
     </main>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
-    <script>
-      console.log('hello')
-    </script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
