--- a/pages/myRecordsAnalyze.html
+++ b/pages/myRecordsAnalyze.html
@@ -70,13 +70,10 @@
                     Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
                 </span>
             </div>
-
         </div>
-</main>
-<%- include('./layout/floatButton') -%>
-<%- include('./layout/footer'); -%>
-
-<script type="module" src="../main.js"></script>
-<script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    </main>
+    <%- include('./layout/floatButton') -%>
+    <%- include('./layout/footer'); -%>
+    <%- include('./layout/baseJs'); -%>
 </body>
 </html>
