--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -253,7 +253,6 @@
     
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
