--- a/pages/emoCardsExpectation.html
+++ b/pages/emoCardsExpectation.html
@@ -53,7 +53,6 @@
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
