--- a/pages/emoCardsOthers.html
+++ b/pages/emoCardsOthers.html
@@ -95,7 +95,6 @@
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
