--- a/pages/home.html
+++ b/pages/home.html
@@ -21,7 +21,6 @@
       </div>
     </main>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
   </body>
 </html>
