--- a/pages/login.html
+++ b/pages/login.html
@@ -68,11 +68,7 @@
         </div>
     </main>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
     <script type="text/javascript" src="../assets/js/formValidation.js"></script>
-    <script>
-        console.log('login hello')
-      </script>
   </body>
 </html>
