--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -8,73 +8,72 @@
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
-  <body>
-    <%- include('./layout/headerLoggedIn'); -%>
+    <body>
+        <%- include('./layout/headerLoggedIn'); -%>
 
-    <main>
-        <div class="container py-16 pt-72" id="top">
-            <!-- process bar -->
-            <div class="mt-24 d-flex justify-content-end">
-                <div class="progressBar mt-16 mb-8 px-12">
-                    <div class="position-relative m-4">
-                        <div class="progress" style="height: 2px;">
-                            <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">1</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">2</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">3</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">4</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">5</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">6</span>
+        <main>
+            <div class="container py-16 pt-72" id="top">
+                <!-- process bar -->
+                <div class="mt-24 d-flex justify-content-end">
+                    <div class="progressBar mt-16 mb-8 px-12">
+                        <div class="position-relative m-4">
+                            <div class="progress" style="height: 2px;">
+                                <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">1</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">2</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">3</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">4</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">5</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">6</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- title bar -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>我的情緒卡夾</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">回到情緒卡</a>
-                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoStrength1st.html"><span class="ms-4">下一步</span></a>
+                <!-- title bar -->
+                <div class="titleBar d-flex justify-content-between align-items-center">
+                    <h2>我的情緒卡夾</h2>
+                    <div class="nav-btn d-flex justify-content-end">
+                        <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">回到情緒卡</a>
+                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoStrength1st.html"><span class="ms-4">下一步</span></a>
+                    </div>
                 </div>
-            </div>
 
-            <p class="mb-40 text-gray-550">
-                🔎 請留下最符合您現在狀態的情緒卡「 3 張」。 您可以透過點擊 <i class="bi bi-x-lg"></i>，將不需要的情緒卡移除。
-            </p>
+                <p class="mb-40 text-gray-550">
+                    🔎 請留下最符合您現在狀態的情緒卡「 3 張」。 您可以透過點擊 <i class="bi bi-x-lg"></i>，將不需要的情緒卡移除。
+                </p>
 
-            <!-- cards -->
-            <div class="d-flex flex-wrap mb-72">
-                <div class="position-relative me-36 mb-20">
-                    <a class="position-absolute top-0 start-100 translate-middle btn-delete-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#deleteExpectation01">
-                        <p>期&nbsp;待</p>
-                        <div class="img-box">
-                        <img src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
-                        </div>
-                    </button>
+                <!-- cards -->
+                <div class="d-flex flex-wrap mb-72">
+                    <div class="position-relative me-36 mb-20">
+                        <a class="position-absolute top-0 start-100 translate-middle btn-delete-card-m"></a>
+                        <button type="button" class="class-card mb-12 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#deleteExpectation01">
+                            <p>期&nbsp;待</p>
+                            <div class="img-box">
+                            <img src="../assets/images/02-expectation/expaction01-expect.svg" alt="期待">
+                            </div>
+                        </button>
+                    </div>
                 </div>
+            
             </div>
-        
-        </div>
-    </main>
-    <%- include('./layout/floatButton') -%>
-    <%- include('./layout/footer'); -%>
-    <%- include('./layout/modalEmoCardsCross'); -%>
+        </main>
+        <%- include('./layout/floatButton') -%>
+        <%- include('./layout/footer'); -%>
+        <%- include('./layout/modalEmoCardsCross'); -%>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
-  </body>
+        <%- include('./layout/baseJs'); -%>
+    </body>
 </html>
