--- a/pages/myRecordsEmoStory.html
+++ b/pages/myRecordsEmoStory.html
@@ -123,7 +123,6 @@
         <%- include('./layout/floatButton') -%>
         <%- include('./layout/footer'); -%>
 
-        <script type="module" src="../main.js"></script>
-        <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+        <%- include('./layout/baseJs'); -%>
     </body>
 </html>
