--- a/pages/myRecordsEmoStoryModify.html
+++ b/pages/myRecordsEmoStoryModify.html
@@ -118,7 +118,6 @@
         <%- include('./layout/floatButton') -%>
         <%- include('./layout/footer'); -%>
 
-        <script type="module" src="../main.js"></script>
-        <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+        <%- include('./layout/baseJs'); -%>
     </body>
 </html>
