--- a/pages/signup.html
+++ b/pages/signup.html
@@ -144,8 +144,7 @@
         </div>
     </main>
 
-    <script type="module" src="../main.js"></script>
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <%- include('./layout/baseJs'); -%>
     <script type="text/javascript" src="../assets/js/formValidation.js"></script>
   </body>
 </html>
