--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -7,6 +7,8 @@
     <title>浪潮情緒卡｜認識情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script type="module" crossorigin src="/wavemocards/assets/main-13fc12c4.js"></script>
     <link rel="stylesheet" href="/wavemocards/assets/main-7c4398d6.css">
   </head>
@@ -14,29 +16,29 @@
     <header class="header h-logined fixed-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
-            <a href="home.html" id="home">浪潮情緒卡</a>
+            <a href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
-                <a href="aboutEmotions.html" class="px-4 py-8" id="aboutEmotions">認識情緒</a>
+                <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8" id="findMyEmotions">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇與紀錄我的情緒">找尋我的情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">他人的分享</a>
+                <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a>
             </li>
             <li class="ms-16">
-                <a href="account.html" class="profile" id="profile">
+                <a href="account.html" class="profile" data-bs-toggle="tooltip" data-bs-placement="bottom" title="管理我的帳戶">
                     <i class="bi bi-person-fill"></i>
                     <i class="bi bi-person-fill-gear"></i>
                 </a>
             </li>
             <li class="ms-16">
-                <a href="#" class="logout" id="logout">
+                <a href="#" class="logout" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登出">
                     <i class="bi bi-door-closed-fill"></i>
                     <i class="bi bi-door-open-fill"></i>
                 </a>
@@ -44,6 +46,7 @@
         </ul>
     </div>
 </header>
+
     <div class="aboutEmotions pt-72" id="top">
         <div class="container py-16">
             <!-- 標題 -->
@@ -183,8 +186,9 @@
     </div>
 </footer>
     
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+<!--  Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../assets/js/toolTips.js"></script>  </body>
 </html>
