--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1 id="home">
-            <a href="index.html">浪潮情緒卡</a>
+            <a href="index.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
-            <li>
+            <li data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">
                 <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
             </li>
-            <li class="ms-20">
+            <li class="ms-20" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
-            <li class="ms-16">
+            <li class="ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
                 <a href="signup.html" class="btn btn-pink c-btn">註冊</a>
             </li>
         </ul>
@@ -38,9 +38,9 @@
     </main>
 
     
-    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
-    <script>
-      console.log('hello')
-    </script>
-  </body>
+<!--  Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../assets/js/toolTips.js"></script>  </body>
 </html>
