--- a/myRecordsAnalyze.html
+++ b/myRecordsAnalyze.html
@@ -14,36 +14,37 @@
     <header class="header h-logined fixed-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
-            <a href="home.html" id="home">浪潮情緒卡</a>
+            <a href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
-                <a href="aboutEmotions.html" class="px-4 py-8" id="aboutEmotions">認識情緒</a>
+                <a href="aboutEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">認識情緒</a>
             </li>
             <li class="ms-16">
-                <a href="findMyEmotions.html" class="px-4 py-8" id="findMyEmotions">找尋我的情緒</a>
+                <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇與紀錄我的情緒">找尋我的情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">他人的分享</a>
+                <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a>
             </li>
             <li class="ms-16">
-                <a href="account.html" class="profile" id="profile">
+                <a href="account.html" class="profile" data-bs-toggle="tooltip" data-bs-placement="bottom" title="管理我的帳戶">
                     <i class="bi bi-person-fill"></i>
                     <i class="bi bi-person-fill-gear"></i>
                 </a>
             </li>
             <li class="ms-16">
-                <a href="#" class="logout" id="logout">
+                <a href="#" class="logout" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登出">
                     <i class="bi bi-door-closed-fill"></i>
                     <i class="bi bi-door-open-fill"></i>
                 </a>
             </li>
         </ul>
     </div>
-</header>    <main>
+</header>
+    <main>
         <div class="container py-16 pt-72" id="top">
             <!-- 標題 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
@@ -103,17 +104,16 @@
                     Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
                 </span>
             </div>
-
         </div>
-</main>
-<!-- 浮動按鈕 -->
+    </main>
+    <!-- 浮動按鈕 -->
 <div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
     <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
     style="width: 60px; height: 60px;">
             <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
             <span class="text-white fs-10 fw-bold">TOP</span>
     </a>
-</div><footer class="footer py-48">
+</div>    <footer class="footer py-48">
     <div class="container">
         <div class="row gap-40">
             <!-- logo -->
@@ -179,8 +179,10 @@
             </div>
         </div>
     </div>
-</footer>
-
-<script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
-</body>
+</footer>    
+<!--  Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../assets/js/toolTips.js"></script></body>
 </html>
